fixing spacing to allow an extra line of text on teaching tab

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ a.active:hover {
 				overflow:hidden;
 			}
 				.contentInner p {
-					margin:40px 10px 10px;
+					margin:20px 10px 5px;
 				}
 				.centerHolder {
 					white-space:nowrap;
